syntax = "proto3";

option go_package =	"github.com/MorhafAlshibly/coanda/src/microservices/tournaments/schema";

package schema;

service Tournaments {
    rpc CreateTournament(CreateTournamentRequest) returns (CreateTournamentResponse);
    rpc GetTournament(GetTournamentRequest) returns (GetTournamentResponse);
    rpc UpdateTournament(UpdateTournamentRequest) returns (UpdateTournamentResponse);
}
 
message CreateTournamentRequest {
    string name = 1;
    string game = 2;
}

message CreateTournamentResponse {
    int32 id = 1;
}

message GetTournamentRequest {
    int32 id = 1;
}

message GetTournamentResponse {
    int32 id = 1;
    string name = 2;
    string game = 3;
}

message UpdateTournamentRequest {
    int32 id = 1;
    string name = 2;
    string game = 3;
}

message UpdateTournamentResponse {
    int32 id = 1;
    string name = 2;
    string game = 3;
}
